--- a/.env.local.back
+++ b/.env.local.back
@@ -1,4 +1,4 @@
+NEXT_PUBLIC_API_URL=https://whispering-emili-giriboy7777-95337321.koyeb.app/
 
-NEXT_PUBLIC_API_URL=http://localhost:9999/
 
 # process.env.NEXT_PUBLIC_API_URL
